--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "bufferutil": "4.0.7",
     "cheerio": "1.0.0-rc.12",
     "discord.js": "12.5.3",
+    "dpkg-compare-versions": "1.0.3",
     "fastify": "3.29.5",
     "node-unar": "1.0.8",
     "pm2": "5.3.0",
     "pretty-bytes": "6.1.0",
-    "quick.db": "9.1.3",
+    "quick.db": "9.1.4",
     "semver": "7.3.8",
     "utf-8-validate": "5.0.10",
     "zlib-sync": "0.1.8"
